<?xml version="1.0"?>
<package format="3">
  <name>tutorial_ros2_motor</name>
  <version>0.0.1</version>
  <description>ROS2 Jazzy educational differential-drive node: controller + kinematics</description>
  <maintainer email="arirang2067@hanyang.ac.kr">Chris Chun</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
